--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,9 @@ dependencies:
   flutter_facebook_auth: ^4.2.0
   sqflite: ^2.0.0+3
   path: ^1.8.0
+  network_info_plus: ^2.1.3
+  gallery_saver: ^2.3.2
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
