--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,6 +60,10 @@ android {
         }
     }
 
+    aaptOptions {
+        noCompress 'tflite'
+        noCompress 'lite'
+    }
 }
 
 flutter {
@@ -70,7 +74,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.facebook.android:facebook-login:[8.1)'
     implementation 'androidx.work:work-runtime:2.7.0-alpha05'
 
 }
