--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ dependencies:
   linkable: ^3.0.1
   cross_connectivity: ^3.0.3
   google_fonts: ^2.3.1
-  flutter_zoom_drawer: ^2.3.1
+  flutter_zoom_drawer: ^2.3.1+1
   intro_slider: ^3.0.3
   curved_navigation_bar: ^1.0.3
   speech_to_text: ^5.4.3
@@ -84,6 +84,14 @@ dependencies:
   network_info_plus: ^2.1.3
   gallery_saver: ^2.3.2
   http: ^0.13.4
+  tflite: ^1.1.2
+  image: ^3.2.0
+  flutter_stripe: ^3.1.0
+  google_maps_flutter: ^2.1.1
+  geolocator: ^8.0.5
+  flutter_geocoder: ^0.2.2-nullsafety
+  geocoding: ^2.0.4
+  camera: ^0.9.8
 
 dev_dependencies:
   flutter_test:
